--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Live Class Project 1</title>
+    <title> Street Style Landing Page</title>
   </head>
   <body>
     <div class="container">
