--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title> Street Style Landing Page</title>
+    <title>Document</title>
   </head>
   <body>
     <div class="container">
@@ -31,7 +31,7 @@
           <div>
             <img src="/assets/Logo.png" alt="brand-logo" />
           </div>
-          <div class="list-box">
+          <div>
             <ul class="list">
               <li class="list-item">Home</li>
               <li class="list-item">Male</li>
@@ -43,8 +43,8 @@
           <div class="button-group">
             <div class="search-icon">
               <svg
-                width="25"
-                height="30"
+                width="32"
+                height="35"
                 viewBox="0 0 32 35"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
@@ -73,17 +73,14 @@
             <img src="/assets/squares.png" alt="square-pattern" />
           </span>
           <!-- Star -->
-          <span class="star1">
-            <img src="/assets/start.png" alt="start-pattern" />
-          </span>
-          <span class="star2">
+          <span class="star">
             <img src="/assets/start.png" alt="start-pattern" />
           </span>
           <!-- Globe -->
           <span class="globe">
             <img src="/assets/globe.png" alt="globe-pattern" />
           </span>
-          <div class="banner-image">
+          <div>
             <img src="/assets/Image.png" alt="person-hero-iamge" />
           </div>
           <div class="hero-container-right">
